tests/type_visitor/type_visitor.exp
Error ---------------------------------------------------------------------------------------------------- testA.js:8:16

Missing type annotation for `A`. `A` is a type parameter declared in function [1] and was implicitly instantiated at
call of `f` [2]. [missing-annot]

   testA.js:8:16
   8| export default f(0, 0); // should just be missing for A, not B
                     ^^^^^^^ [2]

References:
   testA.js:4:1
   4| function f<A,B>(a: A, b: B): T<A,B> {
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- testB.js:8:16

Missing type annotation for `B`. `B` is a type parameter declared in function [1] and was implicitly instantiated at
call of `f` [2]. [missing-annot]

   testB.js:8:16
   8| export default f(0, 0); // should just be missing for B, not A
                     ^^^^^^^ [2]

References:
   testB.js:4:1
   4| function f<A,B>(a: A, b: B): T<A,B> {
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- testC.js:4:16

Missing type annotation for `T`. `T` is a type parameter declared in function type [1] and was implicitly instantiated
at call of `test` [2]. [missing-annot]

   testC.js:4:16
   4| export default test(); // missing annotation error since T appears contravariantly.
                     ^^^^^^ [2]

References:
   testC.js:2:22
   2| declare function test<T>(): ((T => T) => any);
                           ^^^^^^^^^^^^^^^^^^^^^^^ [1]



Found 3 errors
